added API doc for auth
